# l2o-cyber-defense

./: .gitignore  README.md  requirements.txt
configs/: default_train.json
l2o-cyber-defense/: pyproject.toml
l2o-cyber-defense/configs/: dataset_small.json  quickstart_train.json
l2o-cyber-defense/notebooks/: 00_slowing_down_original.ipynb
l2o-cyber-defense/scripts/: smoke_demo.py
l2o-cyber-defense/src/l2o_cyber_defense/: masks.py  objectives.py  projections.py  visualization.py
l2o-cyber-defense/tests/: test_objectives.py  test_projections.py
notebooks/: 01_graph_generation_and_masks.ipynb  02_fixed_point_policy_experiments.ipynb  03_training_theta_on_dag_dataset.ipynb
results/: quickstart_train.json
scripts/: make_dag_dataset.py  single_instance_demo.py  train_theta.py
src/l2o_cyber_defense/: __init__.py  config.py  fixed_point.py  graph_generators.py  utils.py
tests/: test_fixed_point.py  test_graph_generators.py
